--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.1.0",
     "next": "10.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.26.5",
+    "ua-parser-js": "^0.7.21"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/marked": "^0.7.4",
+    "@types/react-dom": "^16.9.8",
+    "@types/ua-parser-js": "^0.7.33",
     "@types/node": "^14.14.8",
     "@types/react": "^16.9.56",
+    "next-images": "^1.4.0",
     "typescript": "^4.0.5"
   }
 }
